[package]
name = "websocket_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.183", features = ["derive"]}
tokio =  { version = "1.31.0" , features = ["full"] }
tungstenite = "0.20.0"
serde_json = "1.0.94"
tokio-tungstenite = "0.20.0"
futures-util = "0.3.28"
url = "2.4.1"
fuels-core = "0.62.0"
fuels = "0.62.0"
fuels-types = "0.42.0"
bincode = "1.3.3"
futures = "0.3.30"
hyperfuel-client = "2.1.0"
hex-literal = "0.4.1"
